@@ -21,6 +21,7 @@ Changes in Release 2.4.0
 [JOST-126] - Declare all non-visibly used namespaces on a signed SignableSAMLObject
 [JOST-127] - Update 3rd party libraries for 2.4.0 release
 [JOST-128] - Defaulting of various metadata collections may be incorrect
+[JOST-131] - Typo in SSODescriptor interface getDefaultArtificateResolutionService()
 
 Changes in Release 2.3.2
 =============================================
